src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__type_level_repetition_too_many.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Too many initial values for array `arraytype`. Expected 5, found 6.
  ┌─ <internal>:2:49
  │
2 │         TYPE arraytype : ARRAY [1..5] OF INT := [6(0)];
  │                                                 ^^^^^^ Too many initial values for array `arraytype`. Expected 5, found 6.
